--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,22 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<kotlin.version>1.2.30</kotlin.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-reflect</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-kotlin</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -53,6 +66,34 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+				<configuration>
+              		<args>
+                        <arg>-Xjsr305=strict</arg>
+                    </args>
+                	<compilerPlugins>
+                    	<plugin>spring</plugin>
+                	</compilerPlugins>
+                </configuration>
+				<dependencies>
+        			<dependency>
+            			<groupId>org.jetbrains.kotlin</groupId>
+            			<artifactId>kotlin-maven-allopen</artifactId>
+            			<version>${kotlin.version}</version>
+        			</dependency>
+        		</dependencies>
+        		<executions>
+        			<execution>
+            			<id>compile</id>
+            			<phase>process-sources</phase>
+            			<goals>
+            				<goal>compile</goal>
+            			</goals>
+        			</execution>
+        		</executions>
 			</plugin>
 		</plugins>
 	</build>
